--- a/style.css
+++ b/style.css
@@ -138,4 +138,5 @@ padding: 10px;
         margin-right:9px;
         background-color:transparent;
        box-shadow: none#888888;
+       cursor: pointer;
     }
