--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ border: rgb(0, 0, 0) solid;
      grid-template-areas: "c1r1 c2r1 c3r1";
 }
 #All-courses{
-    background-color: rgba(255, 255, 255, 0);
+    background-color:transparent;
     grid-area:c1r1;
   
 align-items: start;
@@ -69,12 +69,12 @@ display: inline;
 #It-Dep{
     background-color: rgba(255, 255, 255, 0);
     grid-area:c2r1;
-  
+ 
 align-items: start;
 padding: 20px;
 display: inline;
 }
-#Second-Dep{
+#Career-Dep{
     background-color: rgba(255, 255, 255, 0);
     grid-area:c3r1;
   
@@ -136,6 +136,10 @@ grid-template-areas:"c1r1b" "c1r2" "c1r3" ;
    padding: 7px;
    gap: 7px;
 }
+#Search{
+   align-self: center;
+   padding: 4px;
+}
 #search-button{
     width:30px;
    height: 20px;
@@ -196,4 +200,24 @@ min-height: min-content;
     #video{
         align-content: center;
         justify-self: center;
+    }
+
+
+    #Books{
+        display: block;
+    margin-right: 30px;
+    }
+    #Books-page{
+        display: grid;
+        grid-template-columns:  repeat(4,1fr);
+       grid-template-rows:repeat(5,1fr); 
+
+      height: 100%;
+      width: 100%;
+     
+       
+      align-items: center;
+      text-align: start;
+       margin: 10px;
+
     }
